6 make meat types controller (#31)
* Added MeatTypeController

* Added MeatTypeRequest

* Added meattype php now has fillable name

* added meattypes routes

* Added swagger documentation to MeatTypeController
